index.html - duplicated the text in SVG and removed the xlinks to symbol. homepage.scss - removed white background of section. animation: interpolated the variables in animation delay as chrome dev tools didn't like it without, also had to change a couple of dash variables to prevent gaps in stroke animation

--- a/_animation.scss
+++ b/_animation.scss
@@ -2,11 +2,11 @@
 $colours:  #66FF99, #40E0D0, #ed217c, #FF0;
 $background: #35363A;
 $max: 4;
-$dash: 70;
+$dash: 50;
 $dash-gap: 10;
-$dash-space: 20;
+$dash-space:30;
 $time: 8s;
-$time-step: 3;
+$time-step: 3s;
 
 svg {
     position: sticky;
@@ -14,7 +14,7 @@ svg {
     height: 100%;
   }
 
-.writing {
+text {
 //  font-family: 'Sriracha', cursive;
   fill: none;
   stroke-width: 3;
@@ -25,11 +25,11 @@ svg {
   animation: stroke $time infinite linear;
 
   @for $hue from 1 through $max {
-    &:nth-child(#{$max}n + #{$hue}) {
+    &:nth-child(#{$hue}) {
       $colour: nth($colours, $hue);
       stroke: $colour;
-      -webkit-animation-delay: -($time-step * $hue);
-      animation-delay: -($time-step * $hue);
+      -webkit-animation-delay: -#{$time-step * $hue};
+      animation-delay: -#{$time-step * $hue};
     }
   }
 }
